# WaveScope

./: .gitignore  CMakeLists.txt  main.cpp
include/: AudioFileSampler.h
src/: AudioFileSampler.cpp  main.cpp
